--- a/src/games/2425-v4in2-gees-game-tim-fabian-main/.devcontainer/devcontainer.json
+++ b/src/games/2425-v4in2-gees-game-tim-fabian-main/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 	"name": "pygame",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	// Or use "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
-	"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
+	"image": "mcr.microsoft.com/devcontainers/universal:latest",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/desktop-lite:1": {
